...

  static const _items = [
    (icon: Icons.map_outlined, activeIcon: Icons.map_rounded, label: 'Bản đồ'),
    (
      icon: Icons.view_list_outlined,
      activeIcon: Icons.view_list_rounded,
      label: 'Danh sách',
    ),
    (
      icon: Icons.settings_outlined,
      activeIcon: Icons.settings_rounded,
      label: 'Cài đặt',
    ),
...
